# KMacAgentFriend

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  WISHLIST.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
KMacAgentFriendApp/: Info.plist  project.yml
KMacAgentFriendApp/Sources/App/: AppDelegate.swift  KMacAgentFriendApp.swift  PermissionsManager.swift
agent/kmac_agent_friend/: __init__.py  __main__.py  activity_log.py  auth.py  config.py  confirm.py  main.py  mock.py  paths.py  performance.py  reincarnation.py  settings_store.py  state.py  ws_manager.py
agent/kmac_agent_friend/agent/: __init__.py  (+1 more)
scripts/: dev_run.sh  new_spec.py  walkthrough_api.sh
specs/: 00-overview.md
specs/contracts/: websocket-events.schema.json
specs/technical/: TR-background-forum.md  TR-background.md  TR-dashboard.md  TR-ipc-websocket.md  TR-knowledge.md  TR-macos-integration.md  TR-mcp.md  TR-memory-longterm.md  TR-memory.md  TR-missions-autopilot.md  TR-mock-mode.md  TR-performance.md  TR-reincarnation.md  TR-security.md  TR-tools-sandbox.md  TR-vision.md  TR-voice-loop.md
tests/: conftest.py  test_activity.py  test_agent_runner.py  test_autopilot.py  test_background.py  test_config.py  test_forum.py  test_health.py  test_inject.py  test_knowledge.py  test_mcp.py  test_memory.py  test_memory_longterm.py  test_missions.py  test_mock_mode.py  test_performance.py  test_reincarnation.py  test_security.py  test_settings_api.py  test_shell.py  test_stt.py  test_tools.py  test_tts_barge_in.py  test_vision.py  test_vision_storage.py  test_voice.py
(+65 files in other folders)
